--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
 					<img class="mobile" src="assets/img/p-2.png">
 				</figure>
 				<figure class="letras-blancas">
-					<img class="mobile" src="assets/img/logo-blanco2.png">
-					<img class="desktop" src="assets/img/titulo_blanco-home.png">
+					<!-- <img class="mobile" src="assets/img/logo-blanco2.png">
+					<img class="desktop" src="assets/img/titulo_blanco-home.png"> -->
+					
+					<svg xmlns="http://www.w3.org/2000/svg"></svg>
+					<img src="assets/img/f-a.svg" alt="forsh">
 				</figure>
 			</div>
 		</section>
