--- a/summer.html
+++ b/summer.html
@@ -37,24 +37,24 @@
 					</div>
 					<div class="global-menu">
 						<div class="global-menu__wrap">
-							<a class="global-menu__item global-menu__item--demo-3" href="/buum/#home">Home</a>
-							<a class="global-menu__item global-menu__item--demo-3 submenu__demo--padre3" href="/buum/#whats-bumming">What’s Buuming!</a>
+							<a class="global-menu__item global-menu__item--demo-3" href="/buum2/#home">Home</a>
+							<a class="global-menu__item global-menu__item--demo-3 submenu__demo--padre3" href="/buum2/#whats-bumming">What’s Buuming!</a>
 								<ul>
 									<li>
-										<a class="global-menu__item global-menu__item--demo-3 submenu__demo3" href="/buum/summer.html"> SUMMER </a>
+										<a class="global-menu__item global-menu__item--demo-3 submenu__demo3" href="/buum2/summer.html"> SUMMER </a>
 									</li>
 									<li>
-										<a class="global-menu__item global-menu__item--demo-3 submenu__demo3" href="/buum/spring.html"> SPRING </a>
+										<a class="global-menu__item global-menu__item--demo-3 submenu__demo3" href="/buum2/spring.html"> SPRING </a>
 									</li>
 									<li>
-										<a class="global-menu__item global-menu__item--demo-3 submenu__demo3" href="/buum/fall.html"> FALL </a>
+										<a class="global-menu__item global-menu__item--demo-3 submenu__demo3" href="/buum2/fall.html"> FALL </a>
 									</li>
 									<li>
-										<a class="global-menu__item global-menu__item--demo-3 submenu__demo3" href="/buum/winter.html"> WINTER </a>
+										<a class="global-menu__item global-menu__item--demo-3 submenu__demo3" href="/buum2/winter.html"> WINTER </a>
 									</li>
 								</ul>
-							<a class="global-menu__item global-menu__item--demo-3" href="/buum/#programs">Loyalty Programs</a>
-							<a class="global-menu__item global-menu__item--demo-3" href="/buum/#contact">Contact</a>
+							<a class="global-menu__item global-menu__item--demo-3" href="/buum2/#programs">Loyalty Programs</a>
+							<a class="global-menu__item global-menu__item--demo-3" href="/buum2/#contact">Contact</a>
 						</div>
 					</div>
 					<svg class="shape-overlays" viewBox="0 0 100 100" preserveAspectRatio="none">
@@ -101,7 +101,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing<br> 
 						elit. aenean commodo.
 					</p>
-					<a href="/buum/eat.html">SEE MORE</a>
+					<a href="/buum2/eat.html">SEE MORE</a>
 				</div>
 			</div>
 			<div class="container flex">
