--- a/eat.html
+++ b/eat.html
@@ -37,10 +37,10 @@
 					</div>
 					<div class="global-menu">
 						<div class="global-menu__wrap">
-							<a class="global-menu__item global-menu__item--demo-3" href="#home">Home</a>
-							<a class="global-menu__item global-menu__item--demo-3" href="#whats-bumming">What’s Buuming!</a>
-							<a class="global-menu__item global-menu__item--demo-3" href="#programs">Loyalty Programs</a>
-							<a class="global-menu__item global-menu__item--demo-3" href="#contact">Contact</a>
+							<a class="global-menu__item global-menu__item--demo-3" href="/buum2/#home">Home</a>
+							<a class="global-menu__item global-menu__item--demo-3" href="/buum2/#whats-bumming">What’s Buuming!</a>
+							<a class="global-menu__item global-menu__item--demo-3" href="/buum2/#programs">Loyalty Programs</a>
+							<a class="global-menu__item global-menu__item--demo-3" href="/buum2/#contact">Contact</a>
 						</div>
 					</div>
 					<svg class="shape-overlays" viewBox="0 0 100 100" preserveAspectRatio="none">
