--- a/winter.html
+++ b/winter.html
@@ -38,7 +38,8 @@
 					<div class="global-menu">
 						<div class="global-menu__wrap">
 							<a class="global-menu__item global-menu__item--demo-3" href="/buum2/#home">Home</a>
-							<a class="global-menu__item global-menu__item--demo-3 submenu__demo--padre3" href="/buum2/#whats-bumming">What’s Buuming!</a>
+							<a class="global-menu__item global-menu__item--demo-3 submenu__demo--padre3" href="/buum2/#whats-bumming">
+								What’s Buuming! <i class="fal fa-arrow-alt-down"></i></a>
 								<ul>
 									<li>
 										<a class="global-menu__item global-menu__item--demo-3 submenu__demo3" href="/buum2/summer.html"> SUMMER </a>
